--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,6 +7,8 @@
             "label": "🧽 Ruff Formatter",
             "command": "${command:python.interpreterPath}",
             "args": [
+                "scripts/run_with_env.py",
+                "${command:python.interpreterPath}",
                 "-m",
                 "ruff",
                 "format"
@@ -32,6 +34,8 @@
             "label": "🔦 Ruff Linter",
             "command": "${command:python.interpreterPath}",
             "args": [
+                "scripts/run_with_env.py",
+                "${command:python.interpreterPath}",
                 "-m",
                 "ruff",
                 "check",
@@ -58,6 +62,8 @@
             "label": "🔦 Pylint",
             "command": "${command:python.interpreterPath}",
             "args": [
+                "scripts/run_with_env.py",
+                "${command:python.interpreterPath}",
                 "-m",
                 "pylint",
                 "sigima",
@@ -92,6 +98,8 @@
             "label": "sphinx-build",
             "command": "${command:python.interpreterPath}",
             "args": [
+                "scripts/run_with_env.py",
+                "${command:python.interpreterPath}",
                 "-m",
                 "sphinx",
                 "build",
@@ -125,6 +133,8 @@
             "label": "sphinx-intl update",
             "command": "${command:python.interpreterPath}",
             "args": [
+                "scripts/run_with_env.py",
+                "${command:python.interpreterPath}",
                 "-m",
                 "sphinx_intl",
                 "update",
@@ -164,6 +174,8 @@
             "label": "sphinx-intl build",
             "command": "${command:python.interpreterPath}",
             "args": [
+                "scripts/run_with_env.py",
+                "${command:python.interpreterPath}",
                 "-m",
                 "sphinx_intl",
                 "build",
@@ -192,6 +204,8 @@
             "label": "🔎 Scan translations",
             "command": "${command:python.interpreterPath}",
             "args": [
+                "scripts/run_with_env.py",
+                "${command:python.interpreterPath}",
                 "-m",
                 "guidata.utils.translations",
                 "scan",
@@ -228,6 +242,8 @@
             "label": "📚 Compile translations",
             "command": "${command:python.interpreterPath}",
             "args": [
+                "scripts/run_with_env.py",
+                "${command:python.interpreterPath}",
                 "-m",
                 "guidata.utils.translations",
                 "compile",
@@ -261,6 +277,8 @@
             "label": "🚀 Pytest",
             "command": "${command:python.interpreterPath}",
             "args": [
+                "scripts/run_with_env.py",
+                "${command:python.interpreterPath}",
                 "-m",
                 "pytest",
                 "--ff",
@@ -290,6 +308,8 @@
             "label": "Generate requirements",
             "command": "${command:python.interpreterPath}",
             "args": [
+                "scripts/run_with_env.py",
+                "${command:python.interpreterPath}",
                 "-m",
                 "guidata.utils.genreqs",
                 "all",
@@ -319,6 +339,8 @@
             "type": "shell",
             "command": "${command:python.interpreterPath}",
             "args": [
+                "scripts/run_with_env.py",
+                "${command:python.interpreterPath}",
                 "-m",
                 "coverage",
                 "run",
@@ -410,6 +432,8 @@
             "label": "Upgrade PlotPyStack",
             "command": "${command:python.interpreterPath}",
             "args": [
+                "scripts/run_with_env.py",
+                "${command:python.interpreterPath}",
                 "-m",
                 "pip",
                 "install",
@@ -491,6 +515,8 @@
             "label": "📚 Build doc",
             "command": "${command:python.interpreterPath}",
             "args": [
+                "scripts/run_with_env.py",
+                "${command:python.interpreterPath}",
                 "-m",
                 "sphinx",
                 "build",
@@ -543,6 +569,8 @@
             "type": "shell",
             "command": "${command:python.interpreterPath}",
             "args": [
+                "scripts/run_with_env.py",
+                "${command:python.interpreterPath}",
                 "-m",
                 "guidata.utils.securebuild",
             ],
