Fix working directory for Sphinx build task in tasks.json

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -181,7 +181,7 @@
                 "build",
             ],
             "options": {
-                "cwd": "${workspaceFolder}/doc",
+                "cwd": "${workspaceFolder}",
                 "statusbar": {
                     "hide": true
                 }
