Add Read the Docs configuration and update project URLs for documentation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,8 +49,8 @@ requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
 
 [project.urls]
-Homepage = "https://datalab-platform.com/"
-Documentation = "https://datalab-platform.com/"
+Homepage = "https://github.com/DataLab-Platform/Sigima"
+Documentation = "https://sigima.readthedocs.io/en/latest/"
 
 [project.optional-dependencies]
 opencv = ["opencv-python-headless >= 4.5.4.60"]
