Add localization directory for Sphinx internationalization updates

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -138,6 +138,8 @@
                 "-m",
                 "sphinx_intl",
                 "update",
+                "-d",
+                "doc/locale",
                 "-p",
                 "build/gettext",
                 "-l",
