--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ dependencies = [
     "PyWavelets >= 1.2",
     "packaging >= 21.3",
     "typing-extensions >= 4.0",
+    "makefun >= 1.13.1",
 ]
 dynamic = ["version"]
 
