Add makefun dependency to requirements files

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ SciPy >= 1.10.1
 babel
 build
 guidata >= 3.12
+makefun >= 1.13.1
 myst_parser
 opencv-python-headless >= 4.5.4.60
 packaging >= 21.3
