Cleanup: update .gitignore and clean_up.bat to reflect changelog location changes in documentation

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ resources/*.png
 doc.zip
 releases/
 /tutorialnotes*.md
-doc/contributing/changelog.md
+doc/changelog.md
 scenario_*.h5
 
 # Windows specific
