--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -31,7 +31,7 @@
             "env": {
                 // "DEBUG": "1",  // ☣️ Debug mode will reset .ini settings
                 // "QT_QPA_PLATFORM": "offscreen",
-                "SIGIMA_DATA": "${workspaceFolder}/cdl/data/tests",
+                "SIGIMA_DATA": "${workspaceFolder}/sigima/data/tests",
             }
         },
         {
