--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,6 +36,10 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install ruff pytest
         pip install .
+        if [ "${{ github.ref_name }}" = "develop" ]; then
+           pip uninstall -y guidata
+           pip install git+https://github.com/PlotPyStack/guidata.git@develop
+        fi
     - name: Lint with Ruff
       run: ruff check --output-format=github sigima
     - name: Test with pytest
