Specific extension for HDF5 image (.h5ima) and signal (.h5sig) formats to avoid confusion

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,6 +79,8 @@ include = ["sigima*"]
     "*.txt",
     "*.json",
     "*_test.h5",
+    "*.h5ima",
+    "*.h5sig",
     "*.npy",
     "*.dcm",
     "*.scor-data",
