--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -256,7 +256,7 @@
                 "clear": false,
                 "echo": true,
                 "focus": false,
-                "panel": "shared",
+                "panel": "dedicated",
                 "reveal": "always",
                 "showReuseMessage": true,
             },
@@ -292,7 +292,7 @@
                 "clear": false,
                 "echo": true,
                 "focus": false,
-                "panel": "shared",
+                "panel": "dedicated",
                 "reveal": "always",
                 "showReuseMessage": true,
             },
