Enable output clearing for main internationalization tasks

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -253,7 +253,7 @@
                 "cwd": "${workspaceFolder}",
             },
             "presentation": {
-                "clear": false,
+                "clear": true,
                 "echo": true,
                 "focus": false,
                 "panel": "dedicated",
@@ -289,7 +289,7 @@
                 "cwd": "${workspaceFolder}",
             },
             "presentation": {
-                "clear": false,
+                "clear": true,
                 "echo": true,
                 "focus": false,
                 "panel": "dedicated",
