--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,5 +26,6 @@
     "python.testing.pytestArgs": [],
     "python.testing.pytestEnabled": true,
     "python.testing.pytestPath": "pytest",
-    "python.testing.unittestEnabled": false
+    "python.testing.unittestEnabled": false,
+    "terminal.integrated.tabs.description": "${workspaceFolder}",
 }
