Streamline GUI context management in tests and update visualization functions

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -311,6 +311,8 @@
                 "-m",
                 "pytest",
                 "--ff",
+                // "--gui",
+                // "--show-windows"
             ],
             "options": {
                 "cwd": "${workspaceFolder}",
