--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -554,7 +554,7 @@
                 "sphinx",
                 "build",
                 "doc",
-                "build/doc",
+                "${workspaceFolder}/build/doc",
                 "-b",
                 "html",
                 // "-W",
