--- a/.coveragerc
+++ b/.coveragerc
@@ -12,6 +12,7 @@ omit =
     */sigima/tests/*
     */guidata/*
     */plotpy/*
+    */qwt/*
 
     #--- Workaround for certain builds of python-opencv package:
     ./config-3.9.py
