Ensure French translation file generation regardless of OS language settings

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -277,6 +277,8 @@
                 ".",
                 "--copyright-holder",
                 "DataLab Platform Developers",
+                "--languages",
+                "fr",
             ],
             "group": {
                 "kind": "build",
