Update .coveragerc to omit stub.py from coverage reports

--- a/.coveragerc
+++ b/.coveragerc
@@ -10,6 +10,7 @@ concurrency = multiprocessing,thread
 
 omit =
     */sigima/tests/*
+    */sigima/client/stub.py
     */guidata/*
     */plotpy/*
     */qwt/*
