Add Qt rendering configuration for headless environments in documentation build

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -6,6 +6,21 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.11"
+  apt_packages:
+    - xvfb
+    - libxkbcommon-x11-0
+    - libxcb-icccm4
+    - libxcb-image0
+    - libxcb-keysyms1
+    - libxcb-randr0
+    - libxcb-render-util0
+    - libxcb-xinerama0
+    - libxcb-xfixes0
+  jobs:
+    pre_build:
+      # Start Xvfb before building docs
+      - "Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &"
+      - "export DISPLAY=:99"
 sphinx:
    configuration: doc/conf.py
 formats:
