docs: Add grid navigation to Getting started page

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -559,6 +559,8 @@
                 "${workspaceFolder}/build/doc",
                 "-b",
                 "html",
+                "-D",
+                "language=fr",
                 // "-W",
             ],
             "options": {
