Add opencv-python-headless to optional dependencies for enhanced functionality

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,6 +68,7 @@ doc = [
     "qtpy",
     "PyQt5",
     "plotpy",
+    "opencv-python-headless >= 4.8.1.78",
 ]
 test = ["pytest", "pytest-xvfb"]
 qt = ["qtpy", "PyQt5", "plotpy"]
