--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,7 +51,7 @@ build-backend = "setuptools.build_meta"
 
 [project.urls]
 Homepage = "https://github.com/DataLab-Platform/Sigima"
-Documentation = "https://sigima.readthedocs.io/en/latest/"
+Documentation = "https://sigima.readthedocs.io/"
 
 [project.optional-dependencies]
 opencv = ["opencv-python-headless >= 4.8.1.78"]
